syntax = "proto3";
option java_multiple_files = true;
package com.WeatherForcast.DbMgmtService.grpc;

message msgUrl {
  string url = 1;
}
message msgId {
  int32 id = 1;
}
service DbMgmtService {
  rpc saveurl(msgUrl) returns (msgId);

  rpc geturl(msgId) returns (msgUrl);
}